output_10.1.168/invert_quda.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/invert_quda.h-50392c.hip.

[HIPIFY] info: file './quda/include/invert_quda.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 43798
  CHANGED lines of code: 1
  TOTAL lines of code: 1326
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 0
  TIME ELAPSED s: 0.83
841d840
<     ColorSpinorField *yp;       //! high precision accumulator
843c842
<     ColorSpinorField *y_sloppy; //! sloppy solution vector
---
>     ColorSpinorField *tmp_sloppy; //! temporary for sloppy mat-vec
